syntax = "proto3";

option csharp_namespace = "UserService.Proto";

package UserService;

import "google/protobuf/empty.proto";

import "UserService.Proto/PasswordService/PasswordCommand.proto";
import "UserService.Proto/PasswordService/PasswordRequest.proto";

service PasswordService {
  // Сменить пароль для текущего пользователя
  //Put
  rpc ChangePassword(ChangePasswordCommand) returns (google.protobuf.Empty);

  // Получить на почту ссылку для смены забытого пароля
  // CaptchaResult in header
  //Put
  rpc GetForgotPasswordToken (ForgotPasswordRequest) returns (google.protobuf.Empty);
   
  // Сменить забытый пароль по токену из почты 
  //Put
  rpc SetForgotPassword (ChangeForgotPasswordCommand) returns (google.protobuf.Empty);
}

